improvement: optimize reading of web identity token file in AwsIrsaCredentialProvider